syntax = "proto3";
package echo_api;

import "google/api/annotations.proto";

message EchoRequest {
    string message = 1;
}

message EchoResponse {
    string message = 1;
}

service EchoService {
    rpc EchoMessage (EchoRequest) returns (EchoResponse) {
          option (google.api.http) = {
            post: "/v1/example/echo"
            body: "*"
          };
        }
}